--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,9 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+## Career advice
+
+* [Béla Bollobás' advice](../assets/Bollobas.pdf)
+* [Fan Chung's advice](https://mathweb.ucsd.edu/~fan/teach/gradpol.html)
+* [Terence Tao's advice](https://terrytao.wordpress.com/career-advice/)
